<resources>
    <string name="app_name">Mini-Projet-03</string>
    <string name="skip">Skip</string>
    <string name="go">Go</string>
    <string name="message">Message</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="manipulate">Manipulate</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="delete_0">Delete(0)</string>

    <string-array name="images_url">
        <item>https://iili.io/H4a4t7S.png</item>
        <item>https://iili.io/H4a4Dk7.png</item>
        <item>https://iili.io/H4a4Z22.png</item>
        <item>https://iili.io/H4a4bp9.png</item>
        <item>https://iili.io/H4a4pIe.png</item>
    </string-array>
</resources>